[gd_scene load_steps=5 format=3 uid="uid://cyy2gxu6b7auo"]

[ext_resource type="Texture2D" uid="uid://bpwhugawfg7pr" path="res://assets/ui/panel_beige.png" id="1_t4nqr"]
[ext_resource type="Script" path="res://level_button/level_button.gd" id="2_f4gyx"]
[ext_resource type="LabelSettings" uid="uid://bttcl1qll2647" path="res://assets/LG_48_white.tres" id="2_m7ebq"]
[ext_resource type="LabelSettings" uid="uid://beuwmqak75u1x" path="res://assets/LG_24_white.tres" id="3_4kcap"]

[node name="LevelButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("1_t4nqr")
script = ExtResource("2_f4gyx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "1"
label_settings = ExtResource("2_m7ebq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "9999"
label_settings = ExtResource("3_4kcap")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="on_mouse_exited"]
[connection signal="pressed" from="." to="." method="on_pressed"]
